Bug 250795 - Updating a book with Library of Congress z39.50 source crashes Tellico
Summary: Updating a book with Library of Congress z39.50 source crashes Tellico
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-10 16:28 UTC by Robby Stephenson
Modified: 2010-09-10 17:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2010-09-10 16:28:49 UTC
Version:           2.3 (using KDE 4.4.5) 
OS:                Linux

Updating a book with title "A Child Called "It"", with ISBN 1-55874-366-9 from the LoC z39.50 source causes a crash.

Reported on the mailing list.

Backtrace:
#6  0x00000000004b2fb4 in QList<KSharedPtr<Tellico::Data::Entry> >::first (
    this=0x10c3c88) at /usr/include/QtCore/qlist.h:263
#7  0x00000000004b27aa in QList<KSharedPtr<Tellico::Data::Entry> >::front (
    this=0x10c3c88) at /usr/include/QtCore/qlist.h:279
#8  0x00000000004d4d3c in Tellico::EntryUpdater::slotResult (this=0x10c3c70, 
    result_=0x13f1440) at /home/robby/kde/src/tellico/src/entryupdater.cpp:159
#9  0x00000000004d5881 in Tellico::EntryUpdater::qt_metacall (this=0x10c3c70, 
    _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fffffffc0c0)
    at /home/robby/kde/build/tellico/src/entryupdater.moc:79


Reproducible: Didn't try
Comment 1 Robby Stephenson 2010-09-10 17:01:38 UTC
SVN commit 1173841 by rstephenson:

Fix crashing bug due to race condition while updating with z39.50 results.

BUG: 250795


 M  +6 -1      ChangeLog  
 M  +4 -2      src/entryupdater.cpp  
 M  +5 -1      src/fetch/z3950fetcher.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1173841