Fix crashing bug due to race condition while updating with z39.50 results.

BUG: 250795

svn path=/trunk/extragear/office/tellico/; revision=1173841